--- a/index.css
+++ b/index.css
@@ -1,6 +1,24 @@
 .profit{
-    width: 100px;
+    width: 200px;
     display: block;
     margin-left: auto ;
     margin-right: auto;
+}
+h1{
+    font-size: 45px;
+    text-align:center;
+    border-bottom: 1px solid gray;
+    margin: 0px;
+    padding:20px;
+}
+ol{
+    border-right: 1px solid rgb(129, 129, 129);
+    width: 100px;
+    margin: 0px;
+    padding: 20px;
+    height:1000px;
+}
+#grid{
+    display: grid;
+    grid-template-columns: 150px 1fr;
 }
